--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "uuid": "^3.3.2",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
